--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: sudo docker version
+      run: sudo docker build -t jc/JodelDL:1.0 .
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        sudo docker image ls,
         echo test, and deploy your project.
