--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,4 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
-      run: |
-        sudo docker image ls,
-        echo test, and deploy your project.
+      run: sudo docker image ls
