--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,6 +33,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Setup Webdriver
-      run: sudo apt install chromium-driver -y  
+      run: sudo apt update && sudo apt install chromium-driver -y  
     - name: Run Script
       run: python JodelDownloader.py
